# usenet-streaming-server

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml  docker-compose.example.yml
.github/workflows/: docker.yml  test.yml
docker/: Dockerfile
migrations/: 0001_init.sql  0002_watchlist.sql  0003_download_phase.sql  0004_history_media_metadata.sql  0005_intro_fingerprints.sql  0006_tv_resolution_prefs.sql  0007_release_blacklist.sql  0007_subtitle_cache.sql  0009_user_auth.sql  0010_unique_usernames.sql  0011_prefer_larger_releases.sql  0012_allow_dolby_vision.sql  0013_stream_cache.sql
scripts/: gen-rar-fixtures.sh
src/: config.rs  discovery.rs  error.rs  lib.rs  main.rs  state.rs  stream_cache.rs
src/api/: auth.rs  cache.rs  downloads.rs  history.rs  internal.rs  metadata.rs  mod.rs  releases.rs  settings.rs  stream.rs  subtitles.rs  system.rs  trakt.rs  users.rs  watchlist.rs  webui.rs
src/db/: downloads.rs  fingerprints.rs  indexers.rs  mod.rs  preferences.rs  providers.rs  release_blacklist.rs  settings.rs  subtitle_cache.rs  users.rs  watch_history.rs  watchlist.rs
src/download/: mod.rs  name.rs  repair.rs
src/indexer/: client.rs  mod.rs
src/nntp/: conn.rs  mod.rs  pool.rs
src/nzb/: health.rs  mod.rs  parse.rs  select.rs  yenc.rs
src/rar/: mod.rs  rar4.rs  rar5.rs  volumes.rs
src/release/: mod.rs  parse.rs  rank.rs  verify.rs
src/stream/: dovi.rs  ffmpeg.rs  ffprobe.rs  fingerprint.rs  intro.rs  mod.rs  range.rs  session.rs  source.rs
src/subtitles/: hash.rs  hls.rs  mod.rs  opensubtitles.rs  subdl.rs  vtt.rs
src/tmdb/: client.rs  mod.rs  (+1 more)
tests/: api_settings.rs  discovery_api.rs  live_benchmark.rs  live_e2e.rs  live_settings.example.toml  newznab.rs  opensubtitles_client.rs  releases_api.rs  subtitles_api.rs  tmdb_client.rs  users_api.rs  watchlist_api.rs  webui.rs
(+45 files in other folders)
